<resources>
    <string name="app_name">Minyuan Plus</string>
    <string name="set_current_week">Set the current week</string>
    <string name="switch_term">Switch the term</string>
    <string name="confirm">Confirm</string>
    <string name="set_success">setting successful</string>
    <string name="cancel">Cancel</string>
    <string name="current_week">(本周)</string>
    <string name="week">周</string>
    <string name="psw_error">教务系统用户名和密码不匹配</string>
    <string name="obtain_schedule_fail">登录成功,获取课表信息失败</string>
    <string name="input_complete_info">Please input the complete information</string>
    <string name="not_common">你还没有进行本学期的教学质量评价</string>
    <string name="need_common">你还没有进行本学期的教学质量评价,在教务系统的“教学质量评价”栏中完成评价工作后，才能进入系统。</string>
    <string name="login_education">登录教务系统</string>
    <string name="query_grade">grade query</string>
    <string name="basic_info">basic information</string>
    <string name="public_course_info">公共任选课信息</string>
    <string name="course_credit_statistical">课程学分统计</string>
    <string name="notification">notification</string>
    <string name="grade_query">grade query</string>
    <string name="home">Home</string>
    <string name="college_news">College News</string>
    <string name="after_class">After Class</string>
    <string name="minyuan">College</string>
    <string name="more">More</string>
    <string name="quit_account">Quit the account</string>
    <string name="the">"第"</string>
    <string name="term">学期</string>
    <string name="my_news">College News</string>
    <string name="college_dynamic">Latest News</string>
    <string name="hot_line">Hot line</string>
    <string name="college_booth">Campus Platform</string>
    <string name="job">Employment and Self-employment</string>
    <string name="college_culture">Campus Culture</string>
    <string name="share_to">share to</string>
    <string name="zhihu">Zhihu Daily</string>
    <string name="guokr">Guokr Hot</string>
    <string name="grade">Grade</string>
    <string name="grade_term">term’s grade</string>
    <string name="grade_fail">Failing grades</string>
    <string name="grade_statistical">Achievement statistics</string>
    <string name="query_grade_term">Query term’s grade</string>
    <string name="query_grade_fail">Query failing grades</string>
    <string name="gpa">Grade point：</string>
    <string name="ordinary_level">Daily performance：</string>
    <string name="terminal_level">Final grade：</string>
    <string name="level">Total score：</string>
    <string name="no_grade">本学期还没有已公布的成绩</string>
    <string name="query_other_term">查查别的学期吧</string>
    <string name="query_grade_fail_try_again">Failed to query the grades, please try again.</string>
    <string name="theme">Theme</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="theme_setting_success">Theme set successfully</string>
    <string name="name">Name</string>
    <string name="sex">Gender</string>
    <string name="nation">Nationality</string>
    <string name="political_status">Political landscape</string>
    <string name="origin_area">Source area</string>
    <string name="origin_province">Source Province</string>
    <string name="college">College</string>
    <string name="major">Major</string>
    <string name="class_info">Class</string>
    <string name="personal_info">Personal information </string>
    <string name="language">Language</string>
    <string name="head">Head portrait</string>
    <string name="save_flow_mode">Save flow</string>
    <string name="clear_cache">Head portrait</string>
    <string name="only_wifi">Only in the WI-FI environment will be automatically loaded</string>
    <string name="clear_app_cache">Clean cache of this APP</string>
    <string name="head_setting_success">setting successfully</string>
    <string name="clear_cache_success">cleaning successfully</string>
    <string name="preference_setting">Preference setting</string>
    <string name="basic_setting">Basic setting</string>
    <string name="app_introduce">Introduce</string>
    <string name="check_update">Application update</string>
    <string name="feedback">Feedback</string>
    <string name="share_application">Share this APP</string>
    <string name="education_news_data">Educational system and college news</string>
    <string name="after_class_data">After class page data</string>
    <string name="open_source">开源协议</string>
    <string name="from_college">Grab since the civil affairs college educational system and the official website, copyright owned by the original author</string>
    <string name="from_net">Grab since the civil affairs internet, copyright owned by the original author</string>
    <string name="feedback_message">民院+现在属于初期版本，用起来不爽，数据获取失败，发现bug，或者有好的idea，都欢迎给作者提供建议。\n \n 方式：\n 1.email:zeroztguo@163.com \n 2.在作者大学城空间留言建议</string>
    <string name="share_app_message">欢迎使用【民院+】，它是一款民院师生专属的应用。它集课表、成绩查询，民院地图，民院新闻，课外资讯，校园信息等功能于一体，希望它能给你的民院生活，带来些许便利。你可以到【http://myplus.bmob.cn/】下载</string>
    <string name="obtain_update_message_fail">获取更新信息失败</string>
    <string name="already_latest_version">It is the latest version</string>
    <string name="prompt">Prompt</string>
    <string name="immediately_download">立即下载</string>
    <string name="downloading_app">正在下载民院+</string>
    <string name="author">Author</string>
    <string name="copyright">Copyright</string>
    <string name="zero">mobile1432 Zero ZT.Guo.</string>
    <string name="requesting">Requested, wait a minute, please </string>
    <string name="zh_simple">中文简体</string>
    <string name="zh_tw">中文繁体</string>
    <string name="en">English</string>
    <string name="language_setting_success">Language set successfully</string>
    <string name="course_info">Course information</string>
    <string name="timetable">Timetable</string>
    <string name="summer">Summer</string>
    <string name="winter">Winter</string>
    <string name="timetable_setting_success">Timetable set successfully</string>
    <string name="notify_list">Notification</string>
    <string name="guokr_news_load_fail">果壳新闻加载失败...</string>
    <string name="minyuan_news_load_fail">民院新闻加载失败...</string>
    <string name="zhihu_daily_load_fail">知乎日报加载失败...</string>
    <string name="login_minyan_education">登录民政学院教务系统</string>
    <string name="login">Login</string>
    <string name="cannot_login">Unable to login?</string>
    <string name="login_prompt">登录帐号为学号，密码为教务系统密码，如忘记密码，请联系辅导员。</string>
    <string name="login_fail">登录失败,请检查密码或稍后再试...</string>
    <string name="map">Map</string>
    <string name="scale">可跟随手势放大缩小</string>
    <string name="weixin_special">Weixin</string>
    <string name="this_term_no_course">本学期还没有课~</string>
    <string name="atm">ATM</string>
    <string name="express">Express</string>
    <string name="version">Version</string>
    <string name="express_load_fail">快递信息加载失败...</string>
    <string name="atm_load_fail">ATM信息加载失败...</string>
    <string name="express_pic_load_fail">快递图片加载失败...</string>
    <string name="atm_pic_load_fail">ATM图片加载失败...</string>
    <string name="press_again">Again according to exit the app</string>
    <string name="map_simple">Map</string>
    <string name="update_schedule_success">Updated schedule is successful</string>
    <string name="course_name">Course</string>
    <string name="classroom">Classroom</string>
    <string name="teacher">Teacher</string>
    <string name="class_num">Time</string>
    <string name="gpa_query">Query gpa</string>
    <string name="gpa_query_success">Query gpa successfully</string>
    <string name="gpa_query_fail">Failed to query gpa</string>
    <string name="this_week_not_course">There is no class in the current week</string>
    <string name="night_mode">Night mode</string>
    <string name="night_mode_prompt">If the light is weak,the use of night mode will be more protective to your eyes</string>
    <string name="query_term_gpa">Query academic year or term’s gpa</string>
    <string name="refresh_schedule">Refresh the schedule</string>
</resources>
