<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:zero="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryBg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/tool_bar" />

    <com.facebook.drawee.view.SimpleDraweeView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
         android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        zero:placeholderImage="@mipmap/icon" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/id_setting_version_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="?attr/textPrimary"
        android:text="@string/version"
        android:textSize="50px" />


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">


            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/app_name"
                android:textColor="?attr/colorPrimaryDark"
                android:textSize="50px" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/id_about_college_plus_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/author"
                android:textColor="?attr/colorPrimaryDark"
                android:textSize="50px" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    zero:placeholderImage="@mipmap/zero_head"
                    zero:roundAsCircle="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textColor="?attr/textPrimary"
                        android:textSize="50px" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="email：zeroztguo@163.com"
                        android:textColor="?attr/textSecond"
                        android:textSize="45px" />
                </LinearLayout>
            </LinearLayout>


            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/copyright"
                android:textColor="?attr/colorPrimaryDark"
                android:textSize="50px" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/id_about_copyright_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
