<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryBg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryBg"
        app:elevation="0dp">
        <include layout="@layout/tool_bar" />

        <com.facebook.drawee.view.SimpleDraweeView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:placeholderImage="@mipmap/icon" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">


            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/preference_setting"
                android:textColor="?attr/colorPrimaryDark"
                android:textSize="50px" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/id_setting_preference_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/basic_setting"
                android:textColor="?attr/colorPrimaryDark"
                android:textSize="50px" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/id_setting_basic_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/id_setting_quit_account_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="88px"
                android:gravity="center"
                android:text="@string/quit_account"
                android:textColor="@color/red"
                android:textSize="50px" />


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
